Fix for bug#30552 and bug#30737 Use lowercase table names so that the example will run on Mac & Windows.